finished sourcefile editing

--- a/_cleaned_tex-sourcefiles/MY451_2.tex
+++ b/_cleaned_tex-sourcefiles/MY451_2.tex
@@ -9,7 +9,7 @@ is organised around two dichotomies:
 \item
 Methods that are used only for variables with small numbers of values,
 vs.\ methods that are used also or only for variables with many
-values (see page \pageref{p_2_variable_types} for more on this
+values (see Section \ref{sss-intro-def-vars-rels} for more on this
 distinction). The former include, in particular, descriptive methods for
 categorical variables, and the latter the methods for continuous
 variables.
