--- a/_cleaned_tex-sourcefiles/MY451_5.tex
+++ b/_cleaned_tex-sourcefiles/MY451_5.tex
@@ -337,7 +337,7 @@ sample mean of $Y$, since
 \label{s_probs_test1sample}
 
 \subsection{Null and alternative hypotheses}
-\label{ss_probs_test1sample_hypotheses}
+\label{ss-probs-test1sample-hypotheses}
 
 A null hypothesis about a single population probability $\pi$ is of the
 form
@@ -563,7 +563,7 @@ out $\hat{\pi}$. This approach will be used in the computer classes.
 
 \subsection{The sampling distribution of the test statistic and
 $P$-values}
-\label{ss_probs_test1sample_samplingd}
+\label{ss-probs-test1sample-samplingd}
 
 \label{p_thumbp}
 Like the $\chi^{2}$ test of Chapter \ref{c_tables}, the $z$-test for a
@@ -1166,7 +1166,7 @@ news, while the margin of error is typically mentioned only in passing
 or omitted altogether.
 
 \subsection{Confidence intervals vs.\ significance tests}
-\label{ss_means_ci_vstests}
+\label{ss-means-ci-vstests}
 
 There are some obvious similarities between the conclusions from significance tests and
 confidence intervals. For example, a $z$-test in the referendum example
