--- a/_cleaned_tex-sourcefiles/MY451_6.tex
+++ b/_cleaned_tex-sourcefiles/MY451_6.tex
@@ -256,7 +256,7 @@ together with a normal curve with the same mean and variance.}
 \vspace*{-3ex}
 \end{figure}
 
-\label{p_model}
+\label{p-model}
 Such a simplifying assumption about
 the population distribution is known as a \textbf{statistical model} for
 the population.
@@ -882,4 +882,3 @@ for the CLT to be adequate. The same is also ultimately true for the
 $\chi^{2}$ distribution and conditions for the $\chi^{2}$ test in Chapter
 \ref{c_tables}. Results like these, and many others, explain the central
 importance of the CLT in statistical methodology.
-
