--- a/_cleaned_tex-sourcefiles/MY451_A.tex
+++ b/_cleaned_tex-sourcefiles/MY451_A.tex
@@ -1958,7 +1958,7 @@ $z$ & Prob.\ & $z$ & Prob.\ & $z$ & Prob.\ & $z$ & Prob.\ & $z$ & Prob.\ & $z$ &
 
 \vspace*{-4ex}
 \section{Table of critical values for $t$-distributions}
-\label{s_disttables_t}
+\label{s-disttables-t}
 
 \begin{center}
 \begin{tabular}{|l|rrrrrrr|}\hline
