--- a/01-MY451_1.rmd
+++ b/01-MY451_1.rmd
@@ -1,6 +1,6 @@
-# Introduction {#c_intro}
+# Introduction {#c-intro}
 
-## What is the purpose of this course? {#s_intro_purpose}
+## What is the purpose of this course? {#s-intro-purpose}
 
 The title of any course should be descriptive of its contents. This one
 is called
@@ -135,7 +135,7 @@ follow it:
 -   If this is the last statistics course you will take, it will enable
     you to understand and use the particular methods covered here. This
     includes the technique of linear regression modelling (described in
-    Chapter \ref{c_regression}), which is arguably the most important
+    Chapter \@ref(c-regression)), which is arguably the most important
     and commonly used statistical method of all. This course can,
     however, introduce only the most important elements of linear
     regression, while some of the more advanced ones are discussed only
@@ -148,7 +148,7 @@ follow it:
     introducing further, ever more powerful statistical methods for
     different types of data.
 
-## Some basic definitions {#s_intro_definitions}
+## Some basic definitions {#s-intro-definitions}
 
 Like any discipline, statistics involves some special terminology which
 makes it easier to discuss its concepts with sufficient precision. Some
@@ -169,9 +169,9 @@ terminology for some of these concepts. If you find yourself confused by
 such differences, please come to the advisory hours or ask your class
 teacher for clarification.
 
-### Subjects and variables {#ss_intro_def_subj}
+### Subjects and variables {#ss-intro-def-subj}
 
-Table \ref{t_datamatrix} shows a small set of quantitative data. Once
+Table \@ref(tab:tdatamatrix) shows a small set of quantitative data. Once
 collected, the data are typically arranged and stored in this kind of
 spreadsheet-type rectangular table, known as a **data matrix**. In the
 computer classes you will see data in this form in SPSS.
@@ -220,26 +220,25 @@ computer classes you will see data in this form in SPSS.
     20      30       2       14           1        2           2          1
 ---------------------------------------------------------------------------
 
-  : An example of a small data matrix based on data from the U.S. General Social Survey (GSS), showing measurements of seven
-  variables for 20 respondents in a social survey. The variables are
-  defined as *age*: age in years; *sex*: sex (1=male; 2=female); *educ*:
-  highest year of school completed; *wrkstat*: labour force status
-  (1=working full time; 2=working part time; 3=temporarily not working;
-  4=unemployed; 5=retired; 6=in education; 7=keeping house; 8=other);
-  *life*: is life exciting or dull? (1=dull; 2=routine; 3=exciting);
-  *income4*: total annual family income (1=\$24,999 or less;
-  2=\$25,000–\$39,999; 3=\$40,000–\$59,999; 4=\$60,000 or more; 99
-  indicates a missing value); *pres92*: vote in the 1992 presidential
-  election (0=did not vote or not eligible to vote; 1=Bill Clinton;
-  2=George H. W. Bush; 3=Ross Perot; 4=Other). <span
-  data-label="t_datamatrix"></span>
+:(\#tab:t-datamatrix) An example of a small data matrix based on data from the U.S. General Social Survey (GSS), showing measurements of seven
+variables for 20 respondents in a social survey. The variables are
+defined as *age*: age in years; *sex*: sex (1=male; 2=female); *educ*:
+highest year of school completed; *wrkstat*: labour force status
+(1=working full time; 2=working part time; 3=temporarily not working;
+4=unemployed; 5=retired; 6=in education; 7=keeping house; 8=other);
+*life*: is life exciting or dull? (1=dull; 2=routine; 3=exciting);
+*income4*: total annual family income (1=\$24,999 or less;
+2=\$25,000–\$39,999; 3=\$40,000–\$59,999; 4=\$60,000 or more; 99
+indicates a missing value); *pres92*: vote in the 1992 presidential
+election (0=did not vote or not eligible to vote; 1=Bill Clinton;
+2=George H. W. Bush; 3=Ross Perot; 4=Other).
 
 The rows (moving downwards) and columns (moving left to right) of a data
 matrix correspond to the first two important terms: the rows to the
 *subjects* and the columns to the *variables* in the data.
 
 -   A **subject** is the smallest unit yielding information in
-    the study. In the example of Table \ref{t_datamatrix}, the subjects
+    the study. In the example of Table \@ref(tab:t-datamatrix), the subjects
     are individual people, as they are in very many social
     science examples. In other cases they may instead be families,
     companies, neighbourhoods, countries, or whatever else is relevant
@@ -250,7 +249,7 @@ matrix correspond to the first two important terms: the rows to the
     Whatever the term, it is usually clear from the context what the
     subjects are in a particular analysis.
 
-    The subjects in the data of Table \ref{t_datamatrix} are uniquely
+    The subjects in the data of Table \@ref(tab:tab:t-datamatrix) are uniquely
     identified only by a number (labelled “Id”) assigned by the
     researcher, as in a survey like this their names would not typically
     be recorded. In situations where the identities of individual
@@ -259,7 +258,7 @@ matrix correspond to the first two important terms: the rows to the
     data matrix.
 
 -   A **variable** is a characteristic which varies between subjects.
-    For example, Table \ref{t_datamatrix} contains data on seven
+    For example, Table \@ref(tab:t-datamatrix) contains data on seven
     variables — age, sex, education, labour force status, attitude to
     life, family income and vote in a past election — defined and
     recorded in the particular ways explained in the caption of
@@ -271,7 +270,7 @@ matrix correspond to the first two important terms: the rows to the
     (i.e. *constants* rather than variables) are rare, usually not
     particularly interesting, and not very difficult to answer.
 
-    The labels of the columns in Table \ref{t_datamatrix} (*age*,
+    The labels of the columns in Table \@ref(tab:t-datamatrix) (*age*,
     *wrkstat*, *income4* etc.) are the names by which the variables are
     uniquely identified in the data file on a computer. Such concise
     titles are useful for this purpose, but should be avoided when
@@ -298,7 +297,7 @@ one variable for all of the subjects.
 The number of subjects in a set of data is known as the **sample size**,
 and is typically denoted by $n$. In a survey, for example, this would be
 the number of people who responded to the questions in the survey
-interview. In Table \ref{t_datamatrix} we have $n=20$. This would
+interview. In Table \@ref(tab:t-datamatrix) we have $n=20$. This would
 normally be a very small sample size for a survey, and indeed the real
 sample size in this one is several thousands. The twenty subjects here
 were drawn from among them to obtain a small example which fits on a
@@ -308,13 +307,13 @@ A common problem in many studies is **nonresponse** or **missing data**,
 which occurs when some measurements are not obtained. For example, some
 survey respondents may refuse to answer certain questions, so that the
 values of the variables corresponding to those questions will be missing
-for them. In Table \ref{t_datamatrix}, the income variable is missing
+for them. In Table \@ref(tab:t-datamatrix), the income variable is missing
 for subjects 6 and 18, and recorded only as a *missing value code*, here
 “99”. Missing values create a problem which has to be addressed somehow
 before or during the statistical analysis. The easiest approach is to
 simply ignore all the subjects with missing values and use only those
 with complete data on all the variables needed for a given analysis. For
-example, any analysis of the data in Table \ref{t_datamatrix} which
+example, any analysis of the data in Table \@ref(tab:t-datamatrix) which
 involved the variable *income4* would then exclude all the data for
 subjects 6 and 18. This method of “complete-case analysis” is usually
 applied automatically by most statistical software packages, including
@@ -324,7 +323,7 @@ with some observations missing. Statisticians have developed better ways
 of dealing with missing data, but they are unfortunately beyond the
 scope of this course.
 
-### Types of variables {#ss_intro_def_vartypes}
+### Types of variables {#ss-intro-def-vartypes}
 
 Information on a variable consists of the observations (measurements) of
 it for the subjects in our data, recorded in the form of numbers.
@@ -357,7 +356,7 @@ It will be necessary to consider two related distinctions:
 
 -   Between continuous and discrete variables
 
-#### Measurement levels {#sss_intro_def_vars_measlevels}
+#### Measurement levels {#sss-intro-def-vars-measlevels}
 
 When a numerical value of a particular variable is allocated to a
 subject, it becomes possible to relate that value to the values assigned
@@ -365,7 +364,7 @@ to other subjects. The **measurement level** of the variable indicates
 how much information the number provides for such comparisons. To
 introduce this concept, consider the variables obtained as answers to
 the following three questions in the former U.K. General Household
-Survey:\label{p_varexample}
+Survey:
 
 \[1\] *Are you*
 
@@ -414,7 +413,7 @@ common classification of measurement levels:
     ($1,2,3,\dots$) is just a simple and concise choice for the codes.
 
     Further examples of nominal-level variables are the variables *sex*,
-    *wrkstat*, and *pres92* in Table \ref{t_datamatrix}.
+    *wrkstat*, and *pres92* in Table \@ref(tab:t-datamatrix).
 
 -   A variable is measured on an **ordinal scale** if its values do have
     a natural ordering. It is then possible to determine not only
@@ -429,7 +428,7 @@ common classification of measurement levels:
     speaking meaningful.
 
     Further examples of ordinal-level variables are *life* and *income4*
-    in Table \ref{t_datamatrix}.
+    in Table \@ref(tab:t-datamatrix).
 
 -   A variable is measured on an **interval scale** if *differences* in
     its values are comparable. One example is temperature measured on
@@ -459,7 +458,7 @@ common classification of measurement levels:
     and that that ratio is equal to the ratio of 30 and 15 cigarettes.
 
     Further examples of ratio-level variables are *age* and *educ* in
-    Table \ref{t_datamatrix}.
+    Table \@ref(tab:t-datamatrix).
 
 The distinction between interval-level and ratio-level variables is in
 practice mostly unimportant, as the same statistical methods can be
@@ -496,7 +495,7 @@ this many possible values. Thus ordinal variables with many possible
 values (at least more than ten, say) are typically treated as if they
 were measured on an interval scale.
 
-#### Continuous and discrete variables {#sss_intro_def_vars_cont}
+#### Continuous and discrete variables {#sss-intro-def-vars-cont}
 
 This distinction is based on the possible values a variable can have:
 
@@ -504,7 +503,7 @@ This distinction is based on the possible values a variable can have:
     be subdivided. Thus a discrete variable can only have certain
     values, and the values between these are logically impossible. For
     example, the marital status variable \[1\] and the health variable
-    \[2\] defined on page \pageref{p_varexample} are discrete, because
+    \[2\] defined at the beginning of Section \@ref(sss-intro-def-vars-measlevels) are discrete, because
     values like marital status of 2.3 or self-reported health of 1.7 are
     impossible given the way the variables are defined.
 
@@ -538,7 +537,7 @@ The measurement level of a variable refers to the way a characteristic
 is recorded in the data, not to some other, perhaps more fundamental
 version of that characteristic. For example, annual income recorded to
 the nearest dollar is continuous, but an income variable (c.f. Table
-\ref{t_datamatrix}) with values
+\@ref(tab:t-datamatrix)) with values
 
 -   if annual income is \$24,999 or less;
 
@@ -548,7 +547,7 @@ the nearest dollar is continuous, but an income variable (c.f. Table
 
 -   if annual income is \$60,000 or more
 
-\label{p_incomegr} is discrete. This kind of variable, obtained by
+is discrete. This kind of variable, obtained by
 grouping ranges of values of an initially continuous measurement, is
 common in the social sciences, where the exact values of such variables
 are often not that interesting and may not be very accurately measured.
@@ -567,7 +566,7 @@ non-categorical discrete variable is the population of a country, which
 does not have a small, fixed set of possible values (unless it is again
 transformed into a grouped variable as in the income example above).
 
-#### Relationships between the two distinctions {#sss_intro_def_vars_rels}
+#### Relationships between the two distinctions {#sss-intro-def-vars-rels}
 
 The distinctions between variables with different measurement levels on
 one hand, and continuous and discrete variables on the other, are
@@ -576,28 +575,33 @@ discrete, and almost all continous variables are interval-level
 variables. This leaves one further possibility, namely a discrete
 interval-level variable; the most common example of this is a **count**,
 such as the number of children in a family or the population of a
-country. These connections are summarized in Table \ref{t_vartypes}.
+country. These connections are summarized in Table \@ref(tab:t-vartypes).
 
   ------------------------------------ ------------------------------------------------------------------- ---------------------------------------------
                                        *Measurement level*                                                 *Measurement level*
+
                                        **Nominal/ordinal**                                                 **Interval/ratio**
+
   **Discrete**                         Many                                                                *Counts*
-                                       * Always **categorical**,                                           * If many different
+
+                                       - Always **categorical**,                                           - If many different
                                        i.e. having a fixed set                                             observed values,
                                        of possible values                                                  often treated as
                                        (categories)                                                        effectively continuous
-                                       * If only two categories,
+
+                                       - If only two categories,
                                        variable is **binary**
                                        (**dichotomous**)
+
   **Continuous**                       None                                                                Many
   ------------------------------------ ------------------------------------------------------------------- ---------------------------------------------
 
-  : Relationships between the types of variables discussed in Section
-  \ref{ss_intro_def_vartypes}.<span data-label="t_vartypes"></span>
+  :(\#tab:t-vartypes) Relationships between the types of variables discussed in Section
+  \@ref(ss-intro-def-vartypes.
 
 In practice the situation may be even simpler than this, in that the
 most relevant distinction is often between the following two
-cases:\label{p_2_variable_types}
+cases:
 
 1.  Discrete variables with a small number of observed values. This
     includes both categorical variables, for which all possible values
@@ -619,7 +623,7 @@ Although there are contexts where we need to distinguish between types
 of variables more carefully than this, for practical purposes this
 simple distinction is often sufficient.
 
-### Description and inference {#ss_intro_def_descr}
+### Description and inference {#ss-intro-def-descr}
 
 In the past, the subtitle of this course was “Description and
 inference”. This is still descriptive of the contents of the course.
@@ -629,7 +633,7 @@ the “too much and not enough” problems with observed data. A set of data
 is “too much” in that it is very difficult to understand or explain the
 data, or to draw any conclusions from it, simply by staring at the
 numbers in a data matrix. Making much sense of even a small data matrix
-like the one in Table \ref{t_datamatrix} is challenging, and the task
+like the one in Table \@ref(tab:t-datamatrix) is challenging, and the task
 becomes entirely impossible with bigger ones. There is thus a clear need
 for methods of statistical description:
 
@@ -658,7 +662,7 @@ Some of the methods described on this course are mainly intended for
 description and others for inference, but many also have a useful role
 in both.
 
-### Association and causation {#ss_intro_def_assoc}
+### Association and causation {#ss-intro-def-assoc}
 
 The simplest methods of analysis described on this course consider
 questions which involve only one variable at a time. For example, the
@@ -737,7 +741,7 @@ on this course, and at greater length on courses of research design such
 as MY400 (and the more advanced MY457, which considers design and
 analysis for causal inference together).
 
-## Outline of the course {#s_intro_outline}
+## Outline of the course {#s-intro-outline}
 
 We have now defined three separate distinctions between different
 problems for statistical analysis, according to (1) the types of
@@ -747,40 +751,40 @@ between several variables. Different combinations of these elements
 require different methods of statistical analysis. They also provide the
 structure for the course, as follows:
 
--   **Chapter \ref{c_descr1}**: Description for single variables of any
+-   **Chapter \@ref(c-descr1)**: Description for single variables of any
     type, and for associations between categorical variables.
 
--   **Chapter \ref{c_samples}**: Some general concepts of
+-   **Chapter \@ref(c-samples)**: Some general concepts of
     statistical inference.
 
--   **Chapter \ref{c_tables}**: Inference for associations between
+-   **Chapter \@ref(c-tables)**: Inference for associations between
     categorical variables.
 
--   **Chapter \ref{c_probs}**: Inference for single dichotomous
+-   **Chapter \@ref(c-probs)**: Inference for single dichotomous
     variables, and for associations between a dichotomous explanatory
     variable and a dichotomous response variable.
 
--   **Chapter \ref{c_contd}**: More general concepts of
+-   **Chapter \@ref(c-contd)**: More general concepts of
     statistical inference.
 
--   **Chapter \ref{c_means}**: Description and inference for
+-   **Chapter \@ref(c-means)**: Description and inference for
     associations between a dichotomous explanatory variable and a
     continuous response variable, and inference for single
     continuous variables.
 
--   **Chapter \ref{c_regression}**: Description and inference for
+-   **Chapter \@ref(c-regression)**: Description and inference for
     associations between any kinds of explanatory variables and a
     continuous response variable.
 
--   **Chapter \ref{c_3waytables}**: Some additional comments on analyses
+-   **Chapter \@ref(c-3waytables)**: Some additional comments on analyses
     which involve three or more categorical variables.
 
-As well as in Chapters \ref{c_samples} and \ref{c_contd}, general
+As well as in Chapters \@ref(c-samples) and \@ref(c-contd), general
 concepts of statistical inference are also gradually introduced in
-Chapters \ref{c_tables}, \ref{c_probs} and \ref{c_means}, initially in
+Chapters \@ref(c-tables), \@ref(c-probs) and \@ref(c-means), initially in
 the context of the specific analyses considered in these chapters.
 
-## The use of mathematics and computing {#s_intro_maths}
+## The use of mathematics and computing {#s-intro-maths}
 
 Many of you will approach this course with some reluctance and
 uncertainty, even anxiety. Often this is because of fears about
@@ -887,8 +891,7 @@ need to be understood first. You also need to learn how to get data into
 SPSS in the first place, how to manipulate the data in various ways, and
 how to export output from the analyses to other packages. Some
 instructions on how to do such things are given in the first computer
-class. The introduction to the computer classes on page
-\pageref{c_class0} also includes details of some SPSS guidebooks and
+class. The introduction to the computer classes also includes details of some SPSS guidebooks and
 other sources of information which you may find useful if you want to
 know more about the program.
 
