fix template.latex, insert `\frontmatter

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,6 +11,8 @@ github-repo: rstudio/bookdown-demo
 description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
 ---
 
+\mainmatter
+
 # Introduction {#c-intro}
 
 ## What is the purpose of this course? {#s-intro-purpose}
