fix ref t-datamatrix in ch1

--- a/_cleaned_tex-sourcefiles/MY451_5.tex
+++ b/_cleaned_tex-sourcefiles/MY451_5.tex
@@ -141,11 +141,11 @@ Voting intention in an EU referendum} \\
 & $n$ & Yes & $\hat{\pi}$ & Diff.\ ($\hat{\Delta}$)& $z$ & $P$ & 95\% CI \\ \hline
 \hspace*{.5em}\rule[1mm]{0mm}{3mm}Control group
 & 201,229 & 142 & 0.000706 & & & &   \\
-\hspace{.5em}(placebo) & & & & & & & \\
+(placebo) & & & & & & & \\
 \hspace*{.5em}Treatment group
 & 200,745 & 57& 0.000284 & $-0.000422$
 & $-6.01$& $<0.001$&  $(-0.000560;$ \\
-\hspace{.5em}(vaccine)
+(vaccine)
 & & & & & & & $-0.000284)$ \\[1ex] \hline
 \multicolumn{8}{|l|}{\rule[1mm]{0mm}{3mm}Example 5.4: Optimistic about young people's future}\\
 & $n$ & Yes & $\hat{\pi}$ & Diff.\ ($\hat{\Delta}$)& $z$ & $P$ & 95\% CI \\ \hline
